extract string to constant